# Capstone

./: .gitignore  README.md  bootstrap.sh  install_ros2.sh  swarm_state_humble.repos
src/swarm_state_estimation/: package.xml  setup.cfg  setup.py
src/swarm_state_estimation/config/: apriltag_36h11.yaml  tag_map.yaml  ukf_base.yaml
src/swarm_state_estimation/config/camera_info/: overhead_camera.yaml  overhead_camera_1080.yaml.bak  overhead_camera_640.yaml.bak
src/swarm_state_estimation/launch/: camera_only.launch.py  live_demo.launch.py
src/swarm_state_estimation/rviz/: swarm_state.rviz
src/swarm_state_estimation/scripts/: print_expected_topics.sh
src/swarm_state_estimation/swarm_state_estimation/: common.py  tag_router.py  ukf_manager.py  usb_camera_node.py
