<?xml version="1.0"?>
<package format="3">
  <name>swarm_state_estimation</name>
  <version>0.1.0</version>
  <description>AprilTag + IMU to UKF localization pipeline for modular swarm robots.</description>

  <maintainer email="josh@example.com">Joshua Kevil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>apriltag_msgs</depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
